refactor: :hammer: adjust strategy of find stocks with feign